Changing timeline graph y axis to logarithmic

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -87,7 +87,8 @@
             yAxis: {
                 title: {
                     text: 'Total Tweets/ReTweets'
-                }
+                },
+                type: 'logarithmic'
             },
             tooltip: {
                 shared: true
