Changing all graphs to logarithmic scales

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -161,11 +161,13 @@
             xAxis: {
                 type: 'linear',
                 maxZoom: 20, // 1 day
+                type: 'logarithmic',
                 title: {
                     text: 'Number of times they got retweeted'
                 }
             },
             yAxis: {
+                type: 'logarithmic',
                 title: {
                     text: 'Number of messages which got retweeted'
                 }
@@ -235,11 +237,13 @@
             xAxis: {
                 type: 'linear',
                 maxZoom: 20, // 1 day
+                type: 'logarithmic',
                 title: {
                     text: 'Total Retweets recieved'
                 }
             },
             yAxis: {
+                type: 'logarithmic',
                 title: {
                     text: 'Number of users'
                 }
@@ -309,11 +313,13 @@
             xAxis: {
                 type: 'linear',
                 maxZoom: 20, // 1 day
+                type: 'logarithmic',
                 title: {
                     text: 'Average retweets'
                 }
             },
             yAxis: {
+                type: 'logarithmic',
                 title: {
                     text: 'Number of users'
                 }
