--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -38,6 +38,7 @@
 		<script src="http://code.highcharts.com/modules/exporting.js"></script>
 
 		<div id="container" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+		<div id="containerRatios" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 	    <br/>
     	Note for the following graph: Messages with less than 250 retweets have been ignored, otherwise graph is not very visible.
 		<div id="container2" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
@@ -128,7 +129,7 @@
             }, {
             	type: 'area',
                 name: 'ReTweets',
-color: '#FF0000',
+                color: '#FF0000',
                 pointInterval: 10 * 60 * 1000,
                 pointStart: Date.UTC(2013, 2, 02, 22, 46, 15, 0),
                 data: retweetData
@@ -136,6 +137,59 @@ color: '#FF0000',
         });
     });
     </script>
+
+    <script>
+	
+    var ratioData = []
+        for(var i = 0; i < tweetData.length; i++) {
+            ratioData.push(tweetData[i] / retweetData[i]);
+        }
+    }
+    
+	$(function () {
+	        $('#containerRatios').highcharts({
+	            chart: {
+	                zoomType: 'x',
+	                spacingRight: 20
+	            },
+	            title: {
+	                text: 'Ratio of Tweet to ReTweet over time'
+	            },
+	            subtitle: {
+	                text: document.ontouchstart === undefined ?
+	                    'Click and drag in the plot area to zoom in' :
+	                    'Drag your finger over the plot to zoom in'
+	            },
+	            xAxis: {
+	                type: 'datetime',
+	                maxZoom: 1 * 3600000, // 1 day
+	                title: {
+	                    text: null
+	                }
+	            },
+	            yAxis: {
+	                title: {
+	                    text: 'Tweets/ReTweets Ratio'
+	                },
+	                type: 'linear'
+	            },
+	            tooltip: {
+	                shared: true
+	            },
+	            legend: {
+	                enabled: true
+	            },
+	            series: [{
+	                type: 'line',
+	                name: 'Ratio',
+	                pointInterval: 10 * 60 * 1000,
+	                pointStart: Date.UTC(2013, 2, 02, 22, 46, 15, 0),
+	                data: ratioData
+	            }]
+	        });
+	    });
+	
+	</script>
 
     <script>
     var totalRetweetData = []
