Added new events

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -22,13 +22,17 @@
 		<br/>
 		Tue 5th Mar 19.45 Manchester United vs Real Madrid -  UEFA Champions League 1 - 2 (Arsenal only English team left in Champions League)
 		<br/>
+		Thu 7th Mar 20.05 Tottenham Hotspur vs Inter Milan - Europa League 3 - 0
+		<br/>
+		Thu 7th Mar 20.05 Sao Paulo vs Arsenal de Sarandi - Copa de America Libertadores 1 - 1 (Different Arsenal team from Argentina playing the Libertadores Cup)
+		<br/>
 		Sun 10th Mar 16.00 Liverpool vs Tottenham Hotspur - Barclays Premier League 3 - 2 (Arsenal getting closer to Spurs in Premiere League)
 		<br/>
 		Tue 12th Mar 19.45 Barcelona vs AC Milan - UEFA Champions League 4 - 0 (Amazing Barcelona comeback from first leg (2 - 0), Arsenal fans getting their hopes high)
 		<br/>
 		Wed 13th Mar 19.45 - Bayern Munich vs Arsenal - UEFA Champions League 2 - 0
 		<br/>
-		Fri 15th Mar 00.30 Arsenal de sarandi vs Sao Paolo  - Copa de America Libertadores 2 - 1 (Different Arsenal team from Argentina playing the Libertadores Cup)
+		Fri 15th Mar 00.30 Arsenal de sarandi vs Sao Paolo  - Copa de America Libertadores 2 - 1
 		<br/>
 		Sat 16th Mar 15.00 - Swansea vs Arsenal - Barclays Premier League 0 - 2
 		<br/>
