--- a/app/views/ajax_result.scala.html
+++ b/app/views/ajax_result.scala.html
@@ -3,7 +3,7 @@
 
 var tweetData = []
     @for(id <- result) {
-        @id.user;
+        @id.getUser();
         @id.text;
         @id.dateTime;
         <br/>
