--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -49,7 +49,7 @@
         
         <script type="text/javascript" charset="utf-8">
         
-        window.setInterval(plus, 1000);
+        window.setInterval(plus(), 1000);
         
         var plus = function() {
         	jsRoutes.controllers.Application.liveFeed().ajax({
