--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -139,7 +139,7 @@
 		        }
 		
 		$(function () {
-        $('#container').highcharts({
+        $('#tab1').highcharts({
             chart: {
                 zoomType: 'x',
                 spacingRight: 20
@@ -220,7 +220,7 @@
         }
     
 	$(function () {
-	        $('#containerRatios').highcharts({
+	        $('#tab2').highcharts({
 	            chart: {
 	                zoomType: 'x',
 	                spacingRight: 20
@@ -273,7 +273,7 @@
 	}
     
     $(function () {
-        $('#container2').highcharts({
+        $('#tab3').highcharts({
             chart: {
                 zoomType: 'x',
                 spacingRight: 20
@@ -325,7 +325,7 @@
 	}
     
     $(function () {
-        $('#container3').highcharts({
+        $('#tab4').highcharts({
             chart: {
                 //zoomType: 'x',
                 //spacingRight: 20,
@@ -377,7 +377,7 @@
 	}
     
     $(function () {
-        $('#container4').highcharts({
+        $('#tab5').highcharts({
             chart: {
                 zoomType: 'x',
                 spacingRight: 20
