--- a/public/stylesheets/Tabs.css
+++ b/public/stylesheets/Tabs.css
@@ -1,3 +1,12 @@
+body {
+    width: 700px;
+    margin: 100px auto 0 auto;
+    font-family: Arial, Helvetica;
+    font-size: small;
+    background-color: #eee;
+    background-image: url(data:image/gif;base64,R0lGODlhCAAIAJEAAMzMzP///////wAAACH5BAEHAAIALAAAAAAIAAgAAAINhG4nudroGJBRsYcxKAA7);
+  }
+
 #tabs {
   overflow: hidden;
   width: 100%;
