--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,7 +17,7 @@
             	<input type="submit">
         	<p>
 		}*@
-		
+		<h3>Events</h3>
 		<br/>
 		Sun 3rd Mar 16.00 - Arsenal vs Tottenham Hotspur - Barclays Premier League 1 - 2
 		<br/>
@@ -43,14 +43,8 @@
 		<script src="http://code.highcharts.com/modules/exporting.js"></script>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/Tabs.css")">
         <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
-        
-        
 
-        
-        
-        
-        <input type='button' value='Start Feed' id='liveFeedBtn' />
-        <br />
+        <h3>Live Feed</h3>
         <div id="result"></div>
         
         <script type="text/javascript" charset="utf-8">
