--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(tweetIDForm: Form[Application.TweetID], tweetsArray : Array[Int], retweetsArray : Array[Int], totalRetweetsArray : Array[Int], totalRetweetsForUserArray : Array[Int], avgRetweetsForUserArray : Array[Int])
+@(tweetIDForm: Form[Application.TweetID], tweetsArray : Array[Int], retweetsArray : Array[Int], totalRetweetsArray : Array[Int], totalRetweetsForUserArray : Array[Int], avgRetweetsForUserArray : Array[Int], userData : Array[UserData])
 
 @import helper._
 @import controllers.routes.javascript._
@@ -69,8 +69,9 @@
 	    <li><a href="#" name="#tab1">One</a></li>
 	    <li><a href="#" name="#tab2">Two</a></li>
 	    <li><a href="#" name="#tab3">Three</a></li>
-	    <li><a href="#" name="#tab4">Four</a></li>    
-	    <li><a href="#" name="#tab5">Five</a></li>    
+	    <li><a href="#" name="#tab4">Four</a></li>
+	    <li><a href="#" name="#tab5">Five</a></li>
+	    <li><a href="#" name="#tab6">Six</a></li>
 	</ul>
 	
 	<div id="content"> 
@@ -79,7 +80,8 @@
 		<div id="tab3" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 		<div id="tab4" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 		<div id="tab5" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
-       </div>
+        <div id="tab6" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+    </div>
 
 		<script>
         	var tweetData = []
@@ -377,7 +379,80 @@
         });
     });
     </script>
+    <script>
+    var userDataSeries = []
+
+    @for(i <- 0 until userData.length){
+        userDataSeries.push({name: @userData(i).getUsername(), color: 'rgba(119, 152, 191, .5)', data: [@userData.getTotalRT(), @userData.getFollowers()]});
+    }
+    $(function () {
+        $('#tab6').highcharts({
+            chart: {
+                type: 'scatter',
+                zoomType: 'xy'
+            },
+            title: {
+                text: 'Total Retweets vs No. of Followers'
+            },
+            subtitle: {
+                text: ''
+            },
+            xAxis: {
+                title: {
+                    enabled: true,
+                    text: 'No. of Followers'
+                },
+                startOnTick: true,
+                endOnTick: true,
+                showLastLabel: true
+            },
+            yAxis: {
+                title: {
+                    text: 'Total Retweets'
+                }
+            },
+            legend: {
+                layout: 'vertical',
+                align: 'left',
+                verticalAlign: 'top',
+                x: 100,
+                y: 70,
+                floating: true,
+                backgroundColor: '#FFFFFF',
+                borderWidth: 1
+            },
+            plotOptions: {
+                scatter: {
+                    marker: {
+                        radius: 5,
+                        states: {
+                            hover: {
+                                enabled: true,
+                                lineColor: 'rgb(100,100,100)'
+                            }
+                        }
+                    },
+                    states: {
+                        hover: {
+                            marker: {
+                                enabled: false
+                            }
+                        }
+                    },
+                    tooltip: {
+                        headerFormat: '<b>{series.name}</b><br>',
+                        pointFormat: '{point.x} Followers, {point.y} Retweets'
+                    }
+                }
+            },
+            series: userDataSeries
+        });
+    });
     
+
+
+    
+    </script>
     
             <script>
         function resetTabs(){
