--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -133,7 +133,6 @@
                         <td>459</td>
                         <td>Wordlwide</td>
                     </tr>
-                    
                     <tr>
                         <td>premierleague</td>
                         <td>1785969</td>
@@ -143,7 +142,51 @@
                         <td>avg</td>
                         <td>location</td>
                     </tr>
-
+                    <tr>
+                        <td>ID_ARSENAL</td>
+                        <td>93,912</td>
+                        <td>923</td>
+                        <td>251</td>
+                        <td>15,816</td>
+                        <td>63</td>
+                        <td>Indonesia</td>
+                    </tr>
+                    <tr>
+                        <td>BBCSporf</td>
+                        <td>461,375</td>
+                        <td>154</td>
+                        <td>10</td>
+                        <td>15,125</td>
+                        <td>1,513</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>ArsenalANPI</td>
+                        <td>31,122</td>
+                        <td>53</td>
+                        <td>162</td>
+                        <td>10,774</td>
+                        <td>67</td>
+                        <td>Jakarta</td>
+                    </tr>
+                    <tr>
+                        <td>Bolanet</td>
+                        <td>291,630</td>
+                        <td>287</td>
+                        <td>154</td>
+                        <td>8,842</td>
+                        <td>57</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>DailyGunners</td>
+                        <td>9,282</td>
+                        <td>317</td>
+                        <td>601</td>
+                        <td>8,748</td>
+                        <td>15</td>
+                        <td>Indonesia -> Emirates stadium</td>
+                    </tr>
 	                <tr>
                         <td>Username</td>
                         <td>Followers</td>
@@ -155,6 +198,7 @@
                     </tr>
                   </tbody>
 	        </table>
+		TRW   TT AVG      U       Foll  FR  LOC
 		
 		</div>
 		<div id="tab5" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
