--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -126,21 +126,21 @@
                     </tr>
                     <tr>
                         <td>Footy_Jokes</td>
-                        <td>545989</td>
+                        <td>545,989</td>
                         <td>70</td>
                         <td>41</td>
-                        <td>18799</td>
+                        <td>18,799</td>
                         <td>459</td>
                         <td>Wordlwide</td>
                     </tr>
                     <tr>
                         <td>premierleague</td>
-                        <td>1785969</td>
+                        <td>1,785,969</td>
                         <td>22</td>
                         <td>84</td>
-                        <td>total rw</td>
-                        <td>avg</td>
-                        <td>location</td>
+                        <td>16,155</td>
+                        <td>192</td>
+                        <td>London</td>
                     </tr>
                     <tr>
                         <td>ID_ARSENAL</td>
@@ -187,7 +187,120 @@
                         <td>15</td>
                         <td>Indonesia -> Emirates stadium</td>
                     </tr>
-	                <tr>
+                  </tbody>
+	        </table>
+		
+		</div>
+		<div id="tab5">
+			<div id="graph5" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+			    
+            <table id="hor-minimalist-a" summary="Employee Pay Sheet">
+                <thead>
+                    <tr>
+                        <th scope="col">Username</th>
+                        <th scope="col">No. of Followers</th>
+                        <th scope="col">No. of Friends</th>
+                        <th scope="col">Total Tweets</th>
+                        <th scope="col">Total Retweets</th>
+                        <th scope="col">Average Retweets</th>
+                        <th scope="col">Location</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>RoyCropperNOT</td>
+                        <td>725,579</td>
+                        <td>102</td>
+                        <td>1</td>
+                        <td>3,489</td>
+                        <td>3,489</td>
+                        <td>PARODY</td>
+                    </tr>
+                    <tr>
+                        <td>19SCazorla</td>
+                        <td>409,464</td>
+                        <td>85</td>
+                        <td>1</td>
+                        <td>2,255</td>
+                        <td>2,255</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>kevinbridges86</td>
+                        <td>564,455</td>
+                        <td>765</td>
+                        <td>1</td>
+                        <td>1,746</td>
+                        <td>1,746</td>
+                        <td>Up the Toon.</td>
+                    </tr>
+                    <tr>
+                        <td>BBCSporf</td>
+                        <td>461,375</td>
+                        <td>154</td>
+                        <td>10</td>
+                        <td>15,125</td>
+                        <td>1,513</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>JaiBrooks1</td>
+                        <td>937,421</td>
+                        <td>20,174</td>
+                        <td>1</td>
+                        <td>1,263</td>
+                        <td>1,263</td>
+                        <td>Melbourne, Australia</td>
+                    </tr>
+                    <tr>
+                        <td>OfficialVieira</td>
+                        <td>449,561</td>
+                        <td>123</td>
+                        <td>3</td>
+                        <td>3,370</td>
+                        <td>1,123</td>
+                        <td>Manchester</td>
+                    </tr>
+                    <tr>
+                        <td>IanWright0</td>
+                        <td>638,170</td>
+                        <td>1,113</td>
+                        <td>2</td>
+                        <td>2,073</td>
+                        <td>1,037</td>
+                        <td>London</td>
+                    </tr>
+                    <tr>
+                        <td>mailreklam</td>
+                        <td>33,971</td>
+                        <td>3,688</td>
+                        <td>1</td>
+                        <td>1,028</td>
+                        <td>1,028</td>
+                        <td>TURKEY</td>
+                    </tr>
+                    <tr>
+                        <td>MarioBaloteLAD</td>
+                        <td>327755</td>
+                        <td>75</td>
+                        <td>4</td>
+                        <td>3,843</td>
+                        <td>961</td>
+                        <td>Milan/Manchester</td>
+                    </tr>
+                    <tr>
+                        <td>MarioBaloltelli</td>
+                        <td>Followers</td>
+                        <td>Friends</td>
+                        <td>Totl tweets</td>
+                        <td>total rw</td>
+                        <td>avg</td>
+                        <td>location</td>
+                    </tr>
+                    
+TRW   TT AVG       U        Foll  FR  LOC
+2833;3;944;"MarioBaloltelli";585606;836;"Milan"
+                    <tr>
                         <td>Username</td>
                         <td>Followers</td>
                         <td>Friends</td>
@@ -197,11 +310,10 @@
                         <td>location</td>
                     </tr>
                   </tbody>
-	        </table>
-		TRW   TT AVG      U       Foll  FR  LOC
-		
+            </table>
+
 		</div>
-		<div id="tab5" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+		
         <div id="tab6" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
     </div>
 
@@ -459,7 +571,7 @@
 	}
     
     $(function () {
-        $('#tab5').highcharts({
+        $('#graph5').highcharts({
             chart: {
                 zoomType: 'x',
                 spacingRight: 20
