--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -290,25 +290,14 @@
                     </tr>
                     <tr>
                         <td>MarioBaloltelli</td>
-                        <td>Followers</td>
-                        <td>Friends</td>
-                        <td>Totl tweets</td>
-                        <td>total rw</td>
-                        <td>avg</td>
-                        <td>location</td>
+                        <td>585,606</td>
+                        <td>836</td>
+                        <td>3</td>
+                        <td>2,833</td>
+                        <td>944</td>
+                        <td>Milan</td>
                     </tr>
                     
-TRW   TT AVG       U        Foll  FR  LOC
-2833;3;944;"MarioBaloltelli";585606;836;"Milan"
-                    <tr>
-                        <td>Username</td>
-                        <td>Followers</td>
-                        <td>Friends</td>
-                        <td>Totl tweets</td>
-                        <td>total rw</td>
-                        <td>avg</td>
-                        <td>location</td>
-                    </tr>
                   </tbody>
             </table>
 
