--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -297,13 +297,131 @@
                         <td>944</td>
                         <td>Milan</td>
                     </tr>
-                    
                   </tbody>
             </table>
 
 		</div>
 		
-        <div id="tab6" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+        <div id="tab6">
+            <div id="graph5" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+
+            <table id="hor-minimalist-a" summary="Employee Pay Sheet">
+                <thead>
+                    <tr>
+                        <th scope="col">Username</th>
+                        <th scope="col">Followers</th>
+                        <th scope="col">No. of Friends</th>
+                        <th scope="col">Total Tweets</th>
+                        <th scope="col">Total Retweets</th>
+                        <th scope="col">Average Retweets</th>
+                        <th scope="col">Location</th>
+                        <th scope="col">Retweets to Followers</th>
+                    </tr>
+                </thead>
+                <tbody>
+                   <tr>
+                        <td>DailyGunners</td>
+                        <td>9,282</td>
+                        <td>317</td>
+                        <td>601</td>
+                        <td>8,748</td>
+                        <td>15</td>
+                        <td>Indonesia -> Emirates stadium</td>
+                        <td>0.94246929541047188106</td>
+                    </tr>
+                    <tr>
+                        <td>GoonersReport</td>
+                        <td>3,568</td>
+                        <td>100</td>
+                        <td>409</td>
+                        <td>2,321</td>
+                        <td>6</td>
+                        <td>Ashburton Grove</td>
+                        <td>0.65050448430493273543</td>
+                    </tr>
+                    <tr>
+                        <td>tomgunner14</td>
+                        <td>17,773</td>
+                        <td>928</td>
+                        <td>252</td>
+                        <td>7,154</td>
+                        <td>28</td>
+                        <td>Nigeria /London</td>
+                        <td>0.40252067743205986609</td>
+                    </tr>
+                    <tr>
+                        <td>afc_trophy</td>
+                        <td>8,685</td>
+                        <td>1</td>
+                        <td>73</td>
+                        <td>3,210</td>
+                        <td>44</td>
+                        <td>Dublin</td>
+                        <td>0.36960276338514680484</td>
+                    </tr>
+                    <tr>
+                        <td>ArsenalANPI</td>
+                        <td>31,122</td>
+                        <td>53</td>
+                        <td>162</td>
+                        <td>10,774</td>
+                        <td>67</td>
+                        <td>Jakarta</td>
+                        <td>0.34618597776492513335</td>
+                    </tr>
+                    <tr>
+                        <td>info_arsenal</td>
+                        <td>16,618</td>
+                        <td>426</td>
+                        <td>310</td>
+                        <td>5,215</td>
+                        <td>17</td>
+                        <td>Indonesia</td>
+                        <td>0.31381634372367312553</td>
+                    </tr>
+                    <tr>
+                        <td>ID_Gooners</td>
+                        <td>10,255</td>
+                        <td>131</td>
+                        <td>264</td>
+                        <td>2,871</td>
+                        <td>11</td>
+                        <td>Indonesia</td>
+                        <td>0.27996099463676255485</td>
+                    </tr>
+                    <tr>
+                        <td>MatiasGooner</td>
+                        <td>15,640</td>
+                        <td>300</td>
+                        <td>104</td>
+                        <td>3,966</td>
+                        <td>38</td>
+                        <td>Follow to stay updated</td>
+                        <td>0.25358056265984654731</td>
+                    </tr>
+                    <tr>
+                        <td>FFArsenal</td>
+                        <td>23,828</td>
+                        <td>71</td>
+                        <td>116</td>
+                        <td>4,404</td>
+                        <td>38</td>
+                        <td>Casablanca</td>
+                        <td>0.18482457612892395501</td>
+                    </tr>
+                    <tr>
+                        <td>ID_ARSENAL</td>
+                        <td>93,912</td>
+                        <td>923</td>
+                        <td>251</td>
+                        <td>15,816</td>
+                        <td>63</td>
+                        <td>Indonesia</td>
+                        <td>0.16841298236647073856</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 
 		<script>
