--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -727,7 +727,7 @@
         userDataSeries.push({name: '@userData(i).getUserName()', color: 'rgba(119, 152, 191, .5)', data: [[@userData(i).getFollowers(), @userData(i).getTotalRT()]]});
     }
     $(function () {
-        $('#tab6').highcharts({
+        $('#graph6').highcharts({
             chart: {
                 type: 'scatter',
                 zoomType: 'xy'
