--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -78,6 +78,78 @@
 	<div id="content"> 
 		<div id="tab1">
 		  <div id="graph1" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+		  <table id="hor-minimalist-a" summary="Employee Pay Sheet">
+                <thead>
+                    <tr>
+                        <th scope="col">Timestamp</th>
+                        <th scope="col">User</th>
+                        <th scope="col">Total Retweets</th>
+                        <th scope="col">Blog</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>2013-03-13 14:41:29</td>
+                        <td>SoccerBible</td>
+                        <td>4336</td>
+                        <td>If #Arsenal beat Bayern Munich tonight we'll give away a pair of Nike Tiempo's! Follow @SoccerBible & RT to enter. http://t.co/ztZyqePd9v</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-05 21:33:39</td>
+                        <td>FootballFunnys</td>
+                        <td>4249</td>
+                        <td>If Robin van Persie had stayed at Arsenal he'd still be in the Champions League...</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-03 15:05:38</td>
+                        <td>Arsenal</td>
+                        <td>4064</td>
+                        <td>ARSENAL TEAM: Szczesny, Jenkinson, Mertesacker, Vermaelen, Monreal, Ramsey, Arteta, Wilshere, Cazorla, Walcott, Giroud #THFCvAFC</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-13 18:25:05</td>
+                        <td>piersmorgan</td>
+                        <td>3955</td>
+                        <td>BREAKING NEWS: 2nd Pope elected since Arsenal last won a trophy. #whitesmoke</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-12 22:12:37</td>
+                        <td>BBCSporf</td>
+                        <td>3825</td>
+                        <td>FACT: Lionel Messi has now scored 53 goals this season, the exact same as Arsenal FC.</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-13 17:45:23</td>
+                        <td>RoyCropperNOT</td>
+                        <td>3489</td>
+                        <td>I reckon Arsenal will end up like Oscar Pistorius tonight. Both legs lost, and only a couple of shots on target.</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-05 21:19:17</td>
+                        <td>piersmorgan</td>
+                        <td>3235</td>
+                        <td>Just think, Van Pursestrings - if you'd stayed at Arsenal.. you'd still be in the Champions League.</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-05 21:41:41</td>
+                        <td>piersmorgan</td>
+                        <td>3082</td>
+                        <td>IT'S OFFICIAL - Arsenal are the only English club still in this year's Champion's League.</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-16 14</td>
+                        <td>Arsenal</td>
+                        <td>2769</td>
+                        <td>Arsenal team: Fabianski, Jenkinson, Mertesacker, Koscielny, Monreal, Arteta, Diaby, Oxlade-Chamberlain, Cazorla, Walcott, Giroud #SCFCvAFC</td>
+                    </tr>
+                    <tr>
+                        <td>2013-03-16 16:52:40</td>
+                        <td>Arsenal</td>
+                        <td>2733</td>
+                        <td>FULL TIME: Swansea 0-2 Arsenal. Arsene Wenger's men get the crucial three points on goals by Nacho Monreal (74) and Gervinho (90) #SCFCvAFC</td>
+                    </tr>
+                </tbody>
+            </table>
 		</div>
 		<div id="tab2" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
 		<div id="tab3" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
