--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -92,7 +92,7 @@
                         <td>2013-03-13 14:41:29</td>
                         <td>SoccerBible</td>
                         <td>4336</td>
-                        <td>If #Arsenal beat Bayern Munich tonight we'll give away a pair of Nike Tiempo's! Follow @SoccerBible & RT to enter. http://t.co/ztZyqePd9v</td>
+                        <td>If #Arsenal beat Bayern Munich tonight we'll give away a pair of Nike Tiempo's! Follow \@SoccerBible & RT to enter. http://t.co/ztZyqePd9v</td>
                     </tr>
                     <tr>
                         <td>2013-03-05 21:33:39</td>
