--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -67,12 +67,12 @@
 	</script>
 	</br>
 	<ul id="tabs">
-	    <li><a href="#" name="#tab1">One</a></li>
-	    <li><a href="#" name="#tab2">Two</a></li>
-	    <li><a href="#" name="#tab3">Three</a></li>
-	    <li><a href="#" name="#tab4">Four</a></li>
-	    <li><a href="#" name="#tab5">Five</a></li>
-	    <li><a href="#" name="#tab6">Six</a></li>
+	    <li><a href="#" name="#tab1">Timeline</a></li>
+	    <li><a href="#" name="#tab2">Retweet/Tweet Ratio</a></li>
+	    <li><a href="#" name="#tab3">Retweet Distribution</a></li>
+	    <li><a href="#" name="#tab4">User retweet distribution</a></li>
+	    <li><a href="#" name="#tab5">Average user retweet distribution</a></li>
+	    <li><a href="#" name="#tab6">Retweets/Followers Ratio</a></li>
 	</ul>
 	
 	<div id="content"> 
