--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -68,11 +68,11 @@
 	</br>
 	<ul id="tabs">
 	    <li><a href="#" name="#tab1">Timeline</a></li>
-	    <li><a href="#" name="#tab2">Retweet/Tweet Ratio</a></li>
+	    <li><a href="#" name="#tab2">Retweet/Tweet</a></li>
 	    <li><a href="#" name="#tab3">Retweet Distribution</a></li>
-	    <li><a href="#" name="#tab4">User retweet distribution</a></li>
-	    <li><a href="#" name="#tab5">Average user retweet distribution</a></li>
-	    <li><a href="#" name="#tab6">Retweets/Followers Ratio</a></li>
+	    <li><a href="#" name="#tab4">Users</a></li>
+	    <li><a href="#" name="#tab5">Average user</a></li>
+	    <li><a href="#" name="#tab6">Retweets/Followers</a></li>
 	</ul>
 	
 	<div id="content"> 
