--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -69,9 +69,9 @@
 	<ul id="tabs">
 	    <li><a href="#" name="#tab1">Timeline</a></li>
 	    <li><a href="#" name="#tab2">Retweet/Tweet</a></li>
-	    <li><a href="#" name="#tab3">Retweet Distribution</a></li>
+	    <li><a href="#" name="#tab3">Retweets</a></li>
 	    <li><a href="#" name="#tab4">Users</a></li>
-	    <li><a href="#" name="#tab5">Average user</a></li>
+	    <li><a href="#" name="#tab5">AVG</a></li>
 	    <li><a href="#" name="#tab6">Retweets/Followers</a></li>
 	</ul>
 	
