--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -712,7 +712,7 @@
                     'Drag your finger over the plot to zoom in'
             },
             xAxis: {
-               // maxZoom: 20, // 1 day
+                maxZoom: 20, // 1 day
                 type: 'linear',
                 title: {
                     text: 'Total Retweets recieved'
