--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,4 +1,4 @@
-@(tweetIDForm: Form[Application.TweetID], tweetsArray : Array[Int], retweetsArray : Array[Int], totalRetweetsArray : Array[Int], totalRetweetsForUserArray : Array[Int], avgRetweetsForUserArray : Array[Int], userData : Array[UserData])
+@(tweetIDForm: Form[Application.TweetID], tweetsArray : Array[Int], retweetsArray : Array[Int], totalRetweetsArray : Array[Int], totalRetweetsForUserArray : Array[Int], avgRetweetsForUserArray : Array[Int], userData : Array[UserData], tweetsNewArray : Array[Int], retweetsNewArray : Array[Int])
 
 @import helper._
 @import controllers.routes.javascript._
@@ -73,6 +73,7 @@
 	    <li><a href="#" name="#tab4">Users</a></li>
 	    <li><a href="#" name="#tab5">AVG</a></li>
 	    <li><a href="#" name="#tab6">Retweets/Followers</a></li>
+	    <li><a href="#" name="#tab7">Live</a></li>
 	</ul>
 	
 	<div id="content"> 
@@ -495,7 +496,10 @@
             </table>
         </div>
     </div>
-
+    
+    <div id="tab7">
+        <div id="graph7" style="min-width: 400px; height: 400px; margin: 0 auto"></div>
+    </div>
 		<script>
         	var tweetData = []
         	@if(tweetsArray != null) {
@@ -892,4 +896,93 @@
         })()
         
         </script>
+        
+        <script>
+        tweetData = []
+        @if(tweetsArray != null) {
+            @for(id <- tweetsNewArray) {
+                tweetData.push(@id);
+            }
+        }
+    
+        retweetData = []
+            @if(retweetsArray != null) {
+                @for(id <- retweetsNewArray) {
+                    retweetData.push(@id);
+                }
+            }
+        
+        $(function () {
+        $('#graph7').highcharts({
+            chart: {
+                zoomType: 'x',
+                spacingRight: 20
+            },
+            title: {
+                text: 'Live Tweets and Retweets' 
+            },
+            subtitle: {
+                text: document.ontouchstart === undefined ?
+                    'Click and drag in the plot area to zoom in' :
+                    'Drag your finger over the plot to zoom in'
+            },
+            xAxis: {
+                type: 'datetime',
+                maxZoom: 1 * 3600000, // 1 day
+                title: {
+                    text: null
+                }
+            },
+            yAxis: {
+                title: {
+                    text: 'Total Tweets/ReTweets'
+                },
+                type: 'linear'
+            },
+            tooltip: {
+                shared: true
+            },
+            legend: {
+                enabled: true
+            },
+            plotOptions: {
+                area: {
+                    fillColor: {
+                        linearGradient: { x1: 0, y1: 0, x2: 0, y2: 1},
+                        stops: [
+                            [0, Highcharts.getOptions().colors[0]],
+                            [1, Highcharts.Color(Highcharts.getOptions().colors[0]).setOpacity(0).get('rgba')]
+                        ]
+                    },
+                    lineWidth: 1,
+                    marker: {
+                        enabled: false
+                    },
+                    shadow: false,
+                    states: {
+                        hover: {
+                            lineWidth: 1
+                        }
+                    },
+                    threshold: null
+                }
+            },
+    
+            series: [{
+                type: 'area',
+                name: 'Tweets',
+                pointInterval: 10 * 60 * 1000,
+                pointStart: Date.UTC(2013, 3, 02, 00, 06, 00, 0),
+                data: tweetData
+            }, {
+                type: 'area',
+                name: 'ReTweets',
+                color: '#FF0000',
+                pointInterval: 10 * 60 * 1000,
+                pointStart: Date.UTC(2013, 3, 02, 00, 06, 00, 0),
+                data: retweetData
+            }]
+        });
+    });
+    </script>
 }
